<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll"
        app:popupTheme="@android:color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/mLlayoutBottomButtons"
        android:layout_marginTop="56dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/changePPText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:text="@string/change_pp_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/changePPBtn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/upload_image_icon" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/changeUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/change_username_hint"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/change_username_hint"
                            android:inputType="textPersonName"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            android:textColorHint="@android:color/white" />
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/changeDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="Change Challenge Distance"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white">

                    <Spinner
                        android:id="@+id/distanceSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/changeFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="Change History Font"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/fontSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/example"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:layout_weight="1"
                                android:gravity="bottom"
                                android:text="Example: "
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/fontTester"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginBottom="8dp"
                                android:layout_weight="20"
                                android:gravity="bottom"
                                android:text="Project Enda"
                                android:textColor="@color/black"
                                android:textSize="24sp" />
                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/changeCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="Change Nationality"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white">

                    <Spinner
                        android:id="@+id/nationalitySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mLlayoutBottomButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</RelativeLayout>